--- a/webpack-examples/index.html
+++ b/webpack-examples/index.html
@@ -7,6 +7,6 @@
     <title>Prueba Webpack</title>
   </head>
   <body>
-    <script src="../build/bundle.js"></script>
+    <h1>Hola Prueba</h1>
   </body>
 </html>
